--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
 
    <header class="navbar">
-
     <div class="logo">
     <img src="globalimages/GIS LOGO NEW.jpg" alt="Logo">
     <span class="logo-name">Global Infotel Solutions</span>
@@ -25,18 +24,10 @@
         <span class="open-icon">☰</span>
         <span class="close-icon">✕</span>
     </div>
-
     <ul class="menu" id="menuList">
         <li><a href="index.html">HOME</a></li>
-
-      <li class="dropdown">
-     <a href="about.html" class="dropMain">ABOUT US</a>
-             <span class="dropBtnArrow">▼</span>
-            <ul class="dropMenu">
-                <li><a href="mission&vision.html">Mission&Vision</a></li>
-                <li><a href="blog.html">Blog</a></li>
-            </ul>
-        </li>
+        
+        <li><a href="about.html">ABOUT US</a></li>
 
        <li class="dropdown">
   
@@ -105,11 +96,12 @@
     </ul>
 </li>
 
+        <li><a href="blog.html">GALLERY</a></li>
+
         <li><a href="sevices.html">SERVICES</a></li>
 
         <li><a href="contact.html">CONTACT US</a></li>
     </ul>
-
 </header>
 
 <!-- BANNER -->
@@ -200,7 +192,7 @@ and world-class products.
     </section>
 
 <!-- OUR SERVICES SECTION -->
-<section class="services-section">
+<!-- <section class="services-section">
   <h2 class="services-title">Our <span>Services</span></h2>
   <div class="services-container">
     <div class="service-box">
@@ -234,7 +226,7 @@ and world-class products.
       <p>A searchlight is a powerful beam of light used to locate or highlight objects in the dark.</p>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- product -->
 <section class="products-section">
@@ -246,7 +238,6 @@ and world-class products.
 <img src="globalimages/cctv.jpeg" alt="Product Image" />
 <h3>CCTV Cameras</h3>
 <p class="desc">High-quality surveillance cameras for complete security monitoring.</p>
-<p class="price">Price: ₹1,499</p>
 <a href="#" class="btn">Learn More</a>
 </div>
 
@@ -255,7 +246,6 @@ and world-class products.
 <img src="globalimages/walkie talkie.jpeg" alt="Product Image" />
 <h3>Walkie Talkies</h3>
 <p class="desc">Reliable long-range communication devices for smooth coordination.</p>
-<p class="price">Price: ₹2,999</p>
 <a href="#" class="btn">Learn More</a>
 </div>
 
@@ -264,7 +254,6 @@ and world-class products.
 <img src="globalimages/acess control.jpeg" alt="Product Image" />
 <h3>Access Control</h3>
 <p class="desc">Smart door access systems ensuring safe and authorized entry.</p>
-<p class="price">Price: ₹3,499</p>
 <a href="#" class="btn">Learn More</a>
 </div>
 
@@ -273,7 +262,6 @@ and world-class products.
 <img src="globalimages/hand held.jpeg" alt="Product Image" />
 <h3>Hand Held Metal Detector</h3>
 <p class="desc">Accurate metal detection for hotels, events, and security checks.</p>
-<p class="price">Price: ₹5,999</p>
 <a href="#" class="btn">Learn More</a>
 </div>
 
@@ -282,7 +270,6 @@ and world-class products.
 <img src="globalimages/door frame.jpeg" alt="Product Image" />
 <h3>Door Frame Metal Detector</h3>
 <p class="desc">High-sensitivity walk-through metal detection for strong security.</p>
-<p class="price">Price: ₹4,299</p>
 <a href="#" class="btn">Learn More</a>
 </div>
 
@@ -291,7 +278,6 @@ and world-class products.
 <img src="globalimages/search light.jpeg" alt="Product Image" />
 <h3>Search Light</h3>
 <p class="desc">A searchlight is a powerful beam of light used to locate or highlight objects in the dark.</p>
-<p class="price">Price: ₹7,999</p>
 <a href="#" class="btn">Learn More</a>
 </div>
 </div>
@@ -345,7 +331,7 @@ and world-class products.
 </section>
 
 <!-- gallery  -->
-<section class="gallery-section">
+<!-- <section class="gallery-section">
   <h2 class="gallery-title">Our <span>Gallery / Blog</span></h2>
 
   <div class="gallery-container">
@@ -367,7 +353,7 @@ and world-class products.
     </div>
 
   </div>
-</section>
+</section> -->
 
 <!-- contact  -->
 <section class="contact-section">
@@ -449,11 +435,12 @@ and world-class products.
     <div class="footer-box">
       <h3>Quick Links</h3>
       <ul class="footer-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#services">Our Services</a></li>
-        <li><a href="#products">Our Products</a></li>
-        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="sevices.html">Our Services</a></li>
+        <li><a href="products.html">Our Products</a></li>
+        <li><a href="blog.html">Gallery</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </div>
 
