--- a/products.html
+++ b/products.html
@@ -13,8 +13,7 @@
 </head>
 <body>
 
-   <header class="navbar">
-
+     <header class="navbar">
     <div class="logo">
     <img src="globalimages/GIS LOGO NEW.jpg" alt="Logo">
     <span class="logo-name">Global Infotel Solutions</span>
@@ -25,20 +24,13 @@
         <span class="open-icon">☰</span>
         <span class="close-icon">✕</span>
     </div>
-
     <ul class="menu" id="menuList">
         <li><a href="index.html">HOME</a></li>
+        
+        <li><a href="about.html">ABOUT US</a></li>
 
-        <li class="dropdown">
-     <a href="about.html" class="dropMain">ABOUT US</a>
-             <span class="dropBtnArrow">▼</span>
-            <ul class="dropMenu">
-                <li><a href="mission&vision.html">Mission&Vision</a></li>
-                <li><a href="blog.html">Blog</a></li>
-            </ul>
-        </li>
-
-        <li class="dropdown">
+       <li class="dropdown">
+  
      <a href="products.html" class="dropMain">PRODUCTS</a>
              <span class="dropBtnArrow">▼</span>
     <ul class="dropMenu">
@@ -101,15 +93,15 @@
                 <li><a href="Door Frame.html">Door Frame Metal Detectors</a></li>
             </ul>
         </li>
-
     </ul>
 </li>
+
+        <li><a href="blog.html">GALLERY</a></li>
 
         <li><a href="sevices.html">SERVICES</a></li>
 
         <li><a href="contact.html">CONTACT US</a></li>
     </ul>
-
 </header>
 
 <!-- banner  -->
@@ -316,12 +308,13 @@
     <!-- QUICK LINKS -->
     <div class="footer-box">
       <h3>Quick Links</h3>
-      <ul class="footer-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#services">Our Services</a></li>
-        <li><a href="#products">Our Products</a></li>
-        <li><a href="#contact">Contact Us</a></li>
+     <ul class="footer-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="sevices.html">Our Services</a></li>
+        <li><a href="products.html">Our Products</a></li>
+        <li><a href="blog.html">Gallery</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </div>
 
