--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
 
        <li class="dropdown">
   
-     <a href="products.html" class="dropMain">PRODUCTS</a>
-             <span class="dropBtnArrow">▼</span>
+     <a href="products.html" class="dropMain">PRODUCTS
+             <span class="dropBtnArrow">▼</span></a>
     <ul class="dropMenu">
         <!-- COLUMN 1 -->
         <li>
@@ -193,6 +193,53 @@
 
 </section>
 
+<!-- mission/vision  -->
+<section class="mv-section">
+
+    <!-- MISSION -->
+    <div class="mv-box">
+        <div class="mv-text">
+            <h2>Our Mission</h2>
+            <p>
+                At Global Infotel Solutions, our mission is to deliver reliable, advanced,
+                and cost-effective security and communication solutions.
+            </p>
+            <p>
+                We aim to enhance safety, productivity, and convenience across industries
+                through innovative products and unmatched service quality.
+            </p>
+        </div>
+
+        <div class="mv-image">
+            <img src="globalimages/mission.jpeg" alt="Mission">
+        </div>
+    </div>
+
+    <!-- FULL WIDTH CENTER IMAGE -->
+    <div class="mv-center-image">
+        <img src="globalimages/center.jpeg" alt="Center Image">
+    </div>
+
+    <!-- VISION -->
+    <div class="mv-box reverse-image-text">
+        <div class="mv-image">
+            <img src="globalimages/vision.jpeg" alt="Vision">
+        </div>
+
+        <div class="mv-text">
+            <h2>Our Vision</h2>
+            <p>
+                Our vision is to become India’s most trusted provider of smart
+                security and communication technologies.
+            </p>
+            <p>
+                We aim to create a future driven by safer environments, stronger
+                connections, and smarter operations.
+            </p>
+        </div>
+    </div>
+</section>
+
 <!-- gallery  -->
 <!-- <section class="gallery-section">
   <h2 class="gallery-title">Our <span>Gallery / Blog</span></h2>
@@ -258,7 +305,7 @@
     <div class="slider-container">
 
         <!-- LEFT ARROW -->
-        <button class="arrow left" id="leftBtn">&#10094;</button>
+        <!-- <button class="arrow left" id="leftBtn">&#10094;</button> -->
 
         <div class="brand-slider" id="slider">
             <img src="globalimages/ajhua.jpeg" alt="">
@@ -273,7 +320,7 @@
         </div>
 
         <!-- RIGHT ARROW -->
-        <button class="arrow right" id="rightBtn">&#10095;</button>
+        <!-- <button class="arrow right" id="rightBtn">&#10095;</button> -->
 
     </div>
 </section>
