--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,8 @@
 
        <li class="dropdown">
   
-     <a href="products.html" class="dropMain">PRODUCTS</a>
-             <span class="dropBtnArrow">▼</span>
+     <a href="products.html" class="dropMain">PRODUCTS
+             <span class="dropBtnArrow">▼</span></a>
     <ul class="dropMenu">
         <!-- COLUMN 1 -->
         <li>
@@ -117,99 +117,45 @@
 
 
 <section class="blog-area">
-    <h2 class="blog-heading">Global Infotel Solutions – Latest Gallery</h2>
+    <!-- <h2 class="blog-heading">Global Infotel Solutions – Latest Gallery</h2>
     <p class="blog-tagline">
         Explore expert insights, product guides and technology updates in Security & Communication Systems.
-    </p>
+    </p> -->
 
     <div class="blog-grid">
 
         <!-- BLOG 1 -->
         <div class="blog-item">
             <img src="globalimages/cctv.jpeg" alt="CCTV Security Blog">
-            <div class="blog-info">
-                <h3>Why CCTV Surveillance is Essential for Modern Security</h3>
-                <p>
-                    CCTV systems have become the backbone of security monitoring. Learn how advanced CCTV 
-                    technologies improve surveillance, reduce risks, and enhance operational safety.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
         </div>
 
         <!-- BLOG 2 -->
         <div class="blog-item">
             <img src="globalimages/walkie talkie.jpeg" alt="Walkie Talkies">
-            <div class="blog-info">
-                <h3>How Walkie-Talkies Improve Fast & Reliable Communication</h3>
-                <p>
-                    Walkie-Talkies offer instant communication in industries, hotels, events, hospitals, and 
-                    security teams. Discover why they remain the most trusted communication tool.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
         </div>
 
         <!-- BLOG 3 -->
         <div class="blog-item">
             <img src="globalimages/acess control.jpeg" alt="Access Control">
-            <div class="blog-info">
-                <h3>The Future of Access Control: Smart, Fast & Secure</h3>
-                <p>
-                    From biometric scanners to RFID access, modern access control systems are creating 
-                    safer and more efficient workplaces. Know how these systems benefit organizations.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
         </div>
 
         <!-- BLOG 4 -->
         <div class="blog-item">
             <img src="globalimages/hand held.jpeg" alt="Hand Held Metal Detector">
-            <div class="blog-info">
-                <h3>Hand Held Metal Detectors – A Must-Have for Security Checks</h3>
-                <p>
-                    Metal detectors ensure accurate threat detection at malls, events, airports, and offices. 
-                    Learn what makes them highly effective and essential for security screening.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
         </div>
 
         <!-- BLOG 5 -->
         <div class="blog-item">
             <img src="globalimages/door frame.jpeg" alt="Door Frame Metal Detector">
-            <div class="blog-info">
-                <h3>Why Door Frame Metal Detectors Are Vital for Public Security</h3>
-                <p>
-                    DFMDs provide quick scanning and high detection accuracy. Find out how they help in 
-                    maintaining safety in high-traffic areas and critical locations.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
         </div>
 
         <!-- BLOG 6 -->
         <div class="blog-item">
             <img src="globalimages/search light.jpeg" alt="Search Light">
-            <div class="blog-info">
-                <h3>High-Power Search Lights – Smart Illumination for Security Forces</h3>
-                <p>
-                    Search lights are essential for night patrolling, rescue operations, campus security, 
-                    and industrial monitoring. Discover their features and advantages.
-                </p>
-                <!-- <a href="#" class="read-btn">Read More</a> -->
-            </div>
         </div>
 
     </div>
 </section>
-
-
-
-
-
-
 
 <!-- footer  -->
 <footer class="footer">
