--- a/products.html
+++ b/products.html
@@ -31,8 +31,8 @@
 
        <li class="dropdown">
   
-     <a href="products.html" class="dropMain">PRODUCTS</a>
-             <span class="dropBtnArrow">▼</span>
+     <a href="products.html" class="dropMain">PRODUCTS
+             <span class="dropBtnArrow">▼</span></a>
     <ul class="dropMenu">
         <!-- COLUMN 1 -->
         <li>
@@ -126,99 +126,85 @@
         <div class="card">
             <img src="globalimages/walkie talkie.jpeg">
             <h3>Access P2</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt1.jpeg">
             <h3>Access P9</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt2.jpeg">
             <h3>Access P3</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt3.jpeg">
             <h3>Access P1 Relay</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt4.jpeg">
             <h3>Lenovo N99</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/walkie talkie.jpeg">
             <h3>Lenovo N89 Digital</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt1.jpeg">
             <h3>Lenovo N7</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt2.jpeg">
             <h3>Lenovo CC100</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt3.jpeg">
             <h3>Kanwee K50</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt4.jpeg">
             <h3>Kanwee K100</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/walkie talkie.jpeg">
             <h3>Kanwee K10</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt1.jpeg">
             <h3>Kanwee K20</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt2.jpeg">
             <h3>Kanwee K60 Digital</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt4.jpeg">
             <h3>Alinco DJ-VX46</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
     </div>
@@ -232,22 +218,19 @@
         <div class="card">
             <img src="globalimages/wt1.jpeg">
             <h3>Alinco DJ-X15-45</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt2.jpeg">
             <h3>Hytera HP708 IS LF</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt4.jpeg">
             <h3>Hytera HP508 IS LF</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
     </div>
@@ -262,29 +245,25 @@
         <div class="card">
             <img src="globalimages/wt1.jpeg">
             <h3>Hytera P50</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt3.jpeg">
             <h3>Hytera P50 Pro</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt2.jpeg">
             <h3>Hytera PNC 380</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
 
         <div class="card">
             <img src="globalimages/wt4.jpeg">
             <h3>Hytera PNC 360</h3>
-            <p class="price">₹ 00.00</p>
-             <a href="explore.html" class="btn-explore">Explore More</a>
+             <a href="explore.html" class="btn-explore">Explore Now</a>
         </div>
     </div>
 </section>
