--- a/sevices.html
+++ b/sevices.html
@@ -31,8 +31,8 @@
 
        <li class="dropdown">
   
-     <a href="products.html" class="dropMain">PRODUCTS</a>
-             <span class="dropBtnArrow">▼</span>
+     <a href="products.html" class="dropMain">PRODUCTS
+             <span class="dropBtnArrow">▼</span></a>
     <ul class="dropMenu">
         <!-- COLUMN 1 -->
         <li>
@@ -115,118 +115,33 @@
     </div>
 </section>
 
+<!-- mid section  -->
+<section class="makes-section">
+<div class="makes-heading">Our Services</div>
 
-<section class="security-section">
-    <div class="security-container">
 
-        <!-- CCTV -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/c3.jpeg" alt="CCTV">
-            </div>
-            <div class="security-content">
-                <h2>CCTV</h2>
-                <p>
-                    CCTV systems provide high-quality surveillance for homes, offices, factories,
-                    warehouses, and public places.
-                </p>
-            </div>
-        </div>
+<div class="makes-grid">
 
-        <!-- Biometric -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/acess control.jpeg" alt="Biometric">
-            </div>
-            <div class="security-content">
-                <h2>Access Control Biometric Machine</h2>
-                <p>
-                    Biometric access control ensures secure authentication with fingerprint, face,
-                    card or password options.
-                </p>
-            </div>
-        </div>
 
-        <!-- HHMD -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/hhmd.jpeg" alt="Metal Detector">
-            </div>
-            <div class="security-content">
-                <h2>Hand Held Metal Detector</h2>
-                <p>
-                    Detects concealed weapons & metal objects with high sensitivity at malls,
-                    airports & events.
-                </p>
-            </div>
-        </div>
+<div class="make-card">
+<h2 class="make-title">Installation</h2>
+<div class="make-image">
+<img src="globalimages/center.jpeg" alt="Installation" class="make-img-tag">
+</div>
+<p class="make-desc">Installation of the equipments</p>
+</div>
 
-        <!-- DFMD -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/Multi-Zone Detection.jpeg" alt="Door Frame Metal Detector">
-            </div>
-            <div class="security-content">
-                <h2>Door Frame Metal Detector</h2>
-                <p>
-                    Walk-through multi-zone detection system for screening people at entry points.
-                </p>
-            </div>
-        </div>
 
-        <!-- Search Light -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/search light.jpeg" alt="Search Light">
-            </div>
-            <div class="security-content">
-                <h2>Search Light</h2>
-                <p>
-                    High power long-range illumination for night patrol & emergency situations.
-                </p>
-            </div>
-        </div>
+<div class="make-card">
+<h2 class="make-title">Repairing</h2>
+<div class="make-image">
+<img src="globalimages/home.jpeg" alt="Repairing" class="make-img-tag">
+</div>
+<p class="make-desc">Repairing of the equipments</p>
+</div>
 
-        <!-- Walkie Talkie -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/walkie talkie.jpeg" alt="Walkie Talkie">
-            </div>
-            <div class="security-content">
-                <h2>Walkie Talkie</h2>
-                <p>
-                    Push-to-talk instant communication for security teams, events & industries.
-                </p>
-            </div>
-        </div>
 
-        <!-- Vehicle Search Mirror -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/Portable Vehicle Search Mirrors.jpeg" alt="Vehicle Search Mirror">
-            </div>
-            <div class="security-content">
-                <h2>Portable Vehicle Search Mirrors</h2>
-                <p>
-                    Used for under-vehicle inspection to detect explosives & suspicious objects.
-                </p>
-            </div>
-        </div>
-
-        <!-- PTP/PTMP -->
-        <div class="security-item">
-            <div class="security-image">
-                <img src="globalimages/Point to Point & Multipoint Link.jpeg" alt="Wireless Link">
-            </div>
-            <div class="security-content">
-                <h2>Point to Point & Multipoint Link</h2>
-                <p>
-                    High-speed wireless data connectivity between buildings & towers.
-                </p>
-            </div>
-        </div>
-
-    </div>
+</div>
 </section>
 
 
