--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
        <li class="dropdown">
   
-     <a href="products.html" class="dropMain">PRODUCTS</a>
-             <span class="dropBtnArrow">▼</span>
+     <a href="products.html" class="dropMain">PRODUCTS
+             <span class="dropBtnArrow">▼</span></a>
     <ul class="dropMenu">
         <!-- COLUMN 1 -->
         <li>
@@ -395,7 +395,7 @@ and world-class products.
     <div class="slider-container">
 
         <!-- LEFT ARROW -->
-        <button class="arrow left" id="leftBtn">&#10094;</button>
+        <!-- <button class="arrow left" id="leftBtn">&#10094;</button> -->
 
         <div class="brand-slider" id="slider">
             <img src="globalimages/ajhua.jpeg" alt="">
@@ -410,7 +410,7 @@ and world-class products.
         </div>
 
         <!-- RIGHT ARROW -->
-        <button class="arrow right" id="rightBtn">&#10095;</button>
+        <!-- <button class="arrow right" id="rightBtn">&#10095;</button> -->
 
     </div>
 </section>
