--- a/walkie talkie.html
+++ b/walkie talkie.html
@@ -31,8 +31,8 @@
 
        <li class="dropdown">
   
-     <a href="products.html" class="dropMain">PRODUCTS</a>
-             <span class="dropBtnArrow">▼</span>
+     <a href="products.html" class="dropMain">PRODUCTS
+             <span class="dropBtnArrow">▼</span></a>
     <ul class="dropMenu">
         <!-- COLUMN 1 -->
         <li>
